--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE> Мой первый HTML-документ</TITLE></HEAD>
-    <BODY text="00FFCC" bgcolor = "000066"><HR SIZE=1></TEXT>ПРИВЕТ МИР!!! <BR>Программирование сайтов и Web-дизайн</BR>
+    <BODY text="00FFCC" bgcolor = "000066"></TEXT>ПРИВЕТ МИР!!! <BR>Программирование сайтов и Web-дизайн</BR><HR SIZE=1>
     <H1 ALIGN="CENTER">Анкета</H1>
     <H2 ALIGN="CENTER">Петров Владимир Владимирович</H2>
     <H3 ALIGN="CENTER">17 лет</H3>
